# challenge

./: Copy_of_Prueba_TВcnica_DE_BP.ipynb  README.md  pyproject.toml
src/dataops_globant_challenge/: section_1.py  section_2.py
