[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataops-globant-challenge"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "pyspark==3.3.0"
]

[project.urls]
Documentation = "https://github.com/JuanEstebanAgudeloAgudelo/dataops-globant-challenge#readme"
Issues = "https://github.com/JuanEstebanAgudeloAgudelo/dataops-globant-challenge/issues"
Source = "https://github.com/JuanEstebanAgudeloAgudelo/dataops-globant-challenge"

[tool.hatch.version]
path = "src/dataops_globant_challenge/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/dataops_globant_challenge tests}"

[tool.coverage.run]
source_pkgs = ["dataops_globant_challenge", "tests"]
branch = true
parallel = true
omit = [
  "src/dataops_globant_challenge/__about__.py",
]

[tool.coverage.paths]
dataops_globant_challenge = ["src/dataops_globant_challenge", "*/dataops-globant-challenge/src/dataops_globant_challenge"]
tests = ["tests", "*/dataops-globant-challenge/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
